<?xml version="1.0" encoding="utf-8"?>
<!-- Fragment om een gebruiker te laten aanmelden -->
<android.support.constraint.ConstraintLayout
        android:id="@+id/fragment_login"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
...

                    android:layout_marginTop="12dp"
            />

            <!-- Ga naar registratie link -->
            <TextView
                    android:id="@+id/button_login_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:text="@string/txt_login_register"
                    android:textAlignment="center"

...
