<resources>
    <!-- errors -->
    <string name="error_no_navigation_app">U heeft geen navigatie applicatie geïnstalleerd op uw toestel.</string>
    <string name="error_no_browser_app">U heeft geen internet browser applicatie geïnstalleerd op uw toestel.</string>
    <string name="error_no_calander_app">U heeft geen agenda applicatie geïnstalleerd op uw toestel.</string>
    <string name="error_something_crashed">Er liep iets mis bij het uitvoeren van de gevraagde actie.</string>
    <string name="error_httpRequest_crashed">Er liep iets mis bij het verwerken van uw serververzoek.</string>
    <string name="error_dns_server_not_avaible">Communicatie met server mislukt. Vermoedelijk heeft u geen internetverbinding.</string>

    <!-- warnings -->
    <string name="warning_empty_fields">Gelieve alle velden in te vullen.</string>
    <string name="warning_passwords_not_equal">Ingevulde wachtwoorden komen niet overeen.</string>

    <!-- questions -->
    <string name="question_exit_app">Wilt u CarMeets afsluiten?</string>
    <string name="question_want_to_logout">Bent u zeker dat u wilt afmelden?</string>

    <!-- hints -->
    <string name="hint_new_username">Nieuwe gebruikersnaam</string>
    <string name="hint_new_email">Nieuw e-mailadres</string>

    <!-- notification -->
    <string name="notification_password_change_success">Wachtwoord succesvol gewijzigd</string>
    <string name="notification_username_change_success">Gebruikersnaam succesvol gewijzigd</string>
    <string name="notification_email_change_success">E-mailadres succesvol gewijzigd</string>

    <!-- shared txt -->
    <string name="txt_meeting">Meeting</string>
    <string name="txt_hello">Hallo</string>
    <string name="txt_manage_account">Account beheren</string>
    <string name="txt_preferences">Voorkeuren</string>
    <string name="txt_yes">Ja</string>
    <string name="txt_no">Nee</string>
    <string name="txt_change">wijzig</string>
    <string name="txt_logout">Afmelden</string>
    <string name="txt_login_required">Aanmelden vereist</string>
    <string name="txt_login_required_for_this_function">Voor het gebruik van deze functie en tal van andere functies moet u aangemeld zijn.</string>
    <string name="txt_login">Aanmelden</string>
    <string name="txt_cancel">Annuleer</string>
    <string name="txt_change_password">Wachtwoord wijzigen</string>
    <string name="txt_change_username">Gebruikersnaam wijzigen</string>
    <string name="txt_change_email">E-mailadres wijzigen</string>
    <string name="txt_choose_new_username">Voer een nieuwe gebruikersnaam in</string>
    <string name="txt_choose_new_email">Voer uw nieuw e-mailadres in</string>
    <string name="txt_success">Gelukt!</string>

    <!-- shared alt -->
    <string name="alt_logo">Logo van CarMeets</string>

    <!-- shared alt -->
    <string name="placeholder_username">Gebruikersnaam</string>
    <string name="placeholder_username_or_email">Gebruikersnaam of e-mailadres</string>
    <string name="placeholder_password">Wachtwoord</string>
    <string name="placeholder_new_password">Nieuw wachtwoord</string>
    <string name="placeholder_confirm_password">Bevestig wachtwoord</string>

    <!-- app -->
    <string name="app_name">CarMeets</string>

    <!-- bottom navigation bar -->
    <string name="menu_home">Meetings</string>
    <string name="menu_favourites">Favorieten</string>
    <string name="menu_account">Account</string>

    <!-- menu_toolbar -->
    <string name="ab_meetings_title">Meetings</string>
    <string name="ab_meetings_subtitle">Alle meetings</string>

    <string name="ab_favourites_title">Favorieten</string>
    <string name="ab_favourite_subtitle">Liked en going meetings</string>

    <string name="ab_account_title">Account</string>
    <string name="ab_account_subtitle">Instellingen aanpassen</string>

    <string name="ab_options_list_design_small">Klassieke weergave</string>
    <string name="ab_options_list_design_big">Grotere weegave</string>

    <string name="ab_notifications">Notificaties</string>

    <!-- meeting -->
    <string name="alt_item_meeting_img">Afbeelding van meeting</string>

    <!-- meeting buttons -->
    <string name="btn_meeting_notification">Notificatie toevoegen</string>
    <string name="btn_meeting_agenda">Opslaan in kalender</string>
    <string name="btn_meeting_route">Routebeschrijving</string>
    <string name="btn_meeting_website">Website</string>
    <string name="txt_meeting_categories">Categorieën</string>
    <string name="txt_meeting_amount_going">Mensen die gaan</string>
    <string name="txt_meeting_amount_liked">Mensen dat dit leuk vinden</string>


    <!-- fragment_login -->
    <string name="txt_login_register">Nog geen account? Registreer hier gratis!</string>

    <!-- fragment_register -->
    <string name="txt_register">Registreren</string>
    <string name="txt_register_login">Al een account? Meld aan!</string>
    <string name="placeholder_register_email">E-mailadres</string>

    <!-- fragment_account -->
    <string name="txt_account">Account</string>
    <string name="btn_account_logoff">Afmelden</string>

    <!-- fragment_preferences -->
    <string name="txt_preferences_change_boot_page">Startscherm instellen</string>
    <string name="txt_preferences_default_categories">Voorkeurscategoriën</string>
    <string name="txt_preferences_choose_boot_page">Startscherm kiezen</string>
    <string name="txt_preferences_default_list_layout">Standaard lijstlayout</string>
    <string name="txt_preferences_choose_default_list_layout">Standaard lijstlayout kiezen</string>

    <!-- Fragment_change_password -->
    <string name="btn_change_password">Wijzig wachtwoord</string>

    <!-- partial_error_with_show_cached -->
    <string name="btn_partial_error_with_show_cache_show_cache">Toon offline meetings</string>
    <string name="btn_partial_error_with_show_cache_try_again">Probeer opnieuw</string>
    <string name="btn_partial_error_with_show_cache_error_message">Er liep iets mis bij het communiceren met de server.</string>
    <string name="btn_partial_error_with_show_cache_error_message_if_internet_try_again">Indien u over een werkende internetverbinding beschikt was de server mogelijks nog aan het opstarten en probeert u best even opnieuw.</string>

    <!-- partial_loading -->
    <string name="txt_loading">Bezig met laden…</string>
    <string name="txt_loading_why_it_takes_so_long">Het kan zijn dat dit even duurt. Waarom? CarMeets is een gratis service en maakt gebruik van een gratis Heroku server :). </string>

    <!-- partial_emptry_list -->
    <string name="txt_empty_list">Lege lijst…</string>
    <string name="txt_empty_list_long">Deze lijst is momenteel jammergenoeg leeg.</string>
    <string name="txt_refresh_the_list">Laad de lijst opnieuw in</string>

    <!-- carmeets -->
    <string name="txt_about_carmeets">Net zoals vele autoliefhebbers was ik het beu steeds te moeten horen dat ik
        weer een kwaliteitsmeeting gemist had omdat ik niet wist wanneer deze plaatsvond. Daarom besloot ik, Lennert
        Bontinck, een app te maken waar je snel en eenvoudig alle meetings naar jouw smaak kan terugvinden en
        bewaren in je agenda.
    </string>
    <string name="alt_carmeets_logo">Het carmeets logo</string>




</resources>
