...
    <item
        android:id="@+id/nav_meetings"
        android:icon="@drawable/ic_list_black_24dp"
        android:title="@string/menu_home" />

    <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_heartcheck_black_24dp"
            android:title="@string/menu_favourites" />

    <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_black_24dp"
            android:title="@string/menu_account" />

</menu>
