...
                android:paddingTop="8dp"
                android:layout_marginEnd="10dp"
        >

            <!-- het liked icoon -->
            <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/image_meeting_details_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:src="@drawable/ic_heart_black_24dp"
                    android:isToggledOn="@{safeUnbox(meetingViewModel.selectedMeeting.isUserLiked)}"

...

                    android:layout_marginStart="8dp"
            />

            <!-- het going icoon -->
            <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/image_meeting_details_going"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:src="@drawable/ic_check_black_24dp"
                    android:isToggledOn="@{safeUnbox(meetingViewModel.selectedMeeting.isUserGoing)}"

...
