...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    >

        <!-- De lijst van meetings -->
        <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_meeting_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                tools:listitem="@layout/item_meeting_small"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        />
...
